force-app/main/default/objects/User_Territory_Association__c/User_Territory_Association__c.object-meta.xml
<CustomObject>
    <label>User Territory Association</label>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>User Territory Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territory Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>