force-app/main/default/objects/User_Territory_Association__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>