force-app/main/default/objects/User_Territory_Association__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory</label>
    <length>18</length>
    <type>Text</type>
</CustomField>