force-app/main/default/objects/User_Territory_Association__c/listViews/All_Associations.listView-meta.xml
<ListView>
    <fullName>All_Associations</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Associations</label>
</ListView>